Modified image and pdf file path

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
+				<div class="author-img" style="background-image: url(public/images/profile.jpg);"></div>
 				<h2><a href="index.html">Sivakumar <i style="color:#f9667e" class="fas fa-chart-line" aria-hidden="true"></i> G.R</a></h2>
 				<span class="position">
 					<h6 class="title">
 						<span></span>
-						<a href="pdf/Sivakumar-Resume.pdf" target="_blank" download="Resume"><strong class="p-1 text-dark">Resume</strong> <i class="fas fa-download"></i></a>
+						<a href="public/pdf/Sivakumar-Resume.pdf" target="_blank" download="Resume"><strong class="p-1 text-dark">Resume</strong> <i class="fas fa-download"></i></a>
 						<span></span>
 					</h6>
 				</span>
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 animate-box pt-1" data-animate-effect="fadeInRight">
-							<img src="images/tech-profile.png" alt="" class="img-responsive img-fluid">
+							<img src="public/images/tech-profile.png" alt="" class="img-responsive img-fluid">
 						</div>
 					</div>
 				</div>
