Removed unused code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<li><a href="#" data-nav-section="about">What I do</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
-						<li><a href="#" data-nav-section="our-story">Experience</a></li>
+						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="awards">Awards & Certifications</a></li>
 						<li><a href="#" data-nav-section="hobbies">Hobbies</a></li>
 						<!--<li><a href="#" data-nav-section="blog">Blog</a></li>-->
@@ -381,364 +381,7 @@
 				</div>
 			</section>
 
-			<section class="section" data-section="our-story">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
-							<div class="title-block">
-								<h1>My <span><em>Experience</em></span></h1>
-								<div class="divider"></div>
-								<p>
-									<em>
-										My Career Started like this
-									</em>
-								 </p>					
-							</div>
-						</div>
-					</div>
-					<ul class="timeline">
-						<li class="animate-box">
-						  <div class="timeline-badge"><i class="fas fa-heart" aria-hidden="true"></i></div>
-						  <div class="timeline-panel">
-							<div class="timeline-heading">
-							  <h2 class="timeline-title"><span>Dec</span> 2014 - <span>Jan</span> 2016</h2>
-							</div>
-							<div class="timeline-body text-center">
-							  <h2 class="timeline-title">Techsamrat</h2>
-							  <p>
-								  The day we meet for the first time and the day to be remembered forever.
-								  The day we meet for the first time and the day to be remembered forever.
-								  The day we meet for the first time and the day to be remembered forever.
-								  The day we meet for the first time and the day to be remembered forever.
-								  The day we meet for the first time and the day to be remembered forever.
-								  The day we meet for the first time and the day to be remembered forever.
-								</p>
-							</div>
-						  </div>
-						</li>
-						<li class="animate-box timeline-inverted">
-						  <div class="timeline-badge"><i class="fas fa-heart" aria-hidden="true"></i></div>
-						  <div class="timeline-panel">
-							<div class="timeline-heading">
-							  <h2 class="timeline-title"><span>Jan</span> 2016 - <span>Jun</span> 2017</h2>
-							</div>
-							<div class="timeline-body text-center">
-							  <h2 class="timeline-title">Ramco Systems</h2>
-							  <p>
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-							  </p>
-							</div>
-						  </div>
-						</li>
-						<li class="animate-box">
-						  <div class="timeline-badge"><i class="fas fa-heart" aria-hidden="true"></i></div>
-						  <div class="timeline-panel">
-							<div class="timeline-heading">
-							  <h2 class="timeline-title"><span>Jun</span> 2017 - <span>Dec</span> 2019</h2>
-							</div>
-							<div class="timeline-body text-center">
-							  <h2 class="timeline-title">ADP Pvt Ltd</h2>
-							  <p>
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-							  </p>
-							</div>
-						  </div>
-						</li>
-						<li class="animate-box timeline-inverted">
-						  <div class="timeline-badge"><i class="fas fa-heart" aria-hidden="true"></i></div>
-						  <div class="timeline-panel">
-							<div class="timeline-heading">
-							  <h2 class="timeline-title"><span>Jan</span> 2020 - <span>Present</span></h2>
-							</div>
-							<div class="timeline-body text-center">
-							  <h2 class="timeline-title">Mindtree</h2>
-							  <p>
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-								The day we meet for the first time and the day to be remembered forever.
-							  </p>
-							</div>
-						  </div>
-						</li>
-						<li class="animate-box">
-							<div class="timeline-end">
-								<div class="timeline-badge"><i class="fas fa-heart" aria-hidden="true"></i></div>
-							</div>
-						</li>
-					</ul>
-					<div class="animate-box row">
-						<div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
-							<div class="final-frase">Now we are ready for the <span>next step...</span></div>
-						</div>
-					</div>
-				</div>
-    		</section>
-
-			<section class="section" data-section="awards">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Bride's Family</span>
-							<h2 class="animate-box">Vani's World</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<div class="services color-1">
-								<h4 class="text-center">Mr. & Mrs. Ragaiah</h4>
-								<img src="images/bride-dad-mom.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Creators</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
-							<div class="services color-2">
-								<h4 class="text-center">G.R. Srinivasas</h4>
-								<img src="images/bride-brother-1.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Elder brother - I</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
-							<div class="services color-1">
-								<h4 class="text-center">G.R. Siva Kumar</h4>
-								<img src="images/bride-brother-two.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Elder brother - II</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
-							<div class="services color-3">
-								<h4 class="text-center">G. Manjula</h4>
-								<img src="images/manjula-single.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Sister-in-law</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
-							<div class="services color-1">
-								<h4 class="text-center">G. Yuvan Shankar</h4>
-								<img src="images/yuvan-single.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Nephew</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
-							<div class="services color-2">
-								<h4 class="text-center">G. Harini</h4>
-								<img src="images/harini.jpg" class="img-responsive" alt="">
-								<div class="relationship-text text-center">Niece</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section" data-section="work">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Gallery</span>
-							<h2 class="colorlib-heading animate-box">Our Memories</h2>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/gallery-1.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">At Home</a></h3>
-										<span>Weekend Fun</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/gallery-2.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Our Gang</a></h3>
-										<span>Celebration Mode</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/gallery-3.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">With Murali</a></h3>
-										<span>Party Starts</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/gallery-4.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Vamsi</a></h3>
-										<span>The Warrior</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/gallery-5.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="">Our Queen</a></h3>
-										<span>MOM</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/gallery-6.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="">Heroes</a></h3>
-										<span>Hero With Super Hero</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/gallery-7.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="">Our Cutie</a></h3>
-										<span>Harini Kutty</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/gallery-8.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="">3 Idiots</a></h3>
-										<span>Christmas Celebration</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="colorlib-blog" data-section="blog">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Featured People</span>
-							<h2 class="colorlib-heading">Our Circle</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-6 col-xs-12">
-							<div class="featured animate-box" data-animate-effect="fadeInLeft">
-								<img src="images/viswa-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-right">
-                	<h2 class="text-italic">Viswa</h2>
-                  <h4><span><em>Mr. Communicator</em></span></h4>
-                  <p>
-										Entertainer and a valuable advisor
-									</p>
-								<br />
-								<br />
-                </div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInLeft">
-								<img src="images/murali-single-new.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-right">
-                	<h2 class="text-italic">Murali</h2>
-                  <h4><span><em>Mr. Mystery</em></span></h4>
-									<p>Silent killer who is known for his witty comments</p>
-									<br />
-									<br />
-                </div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInLeft">
-								<img src="images/magesh-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-right">
-                	<h2 class="text-italic">Mahesh</h2>
-                  <h4><span><em>Mr. Yo-Yo</em></span></h4>
-									<p>
-										A foreigner unfortunately born in India LOL.
-									</p>
-									<br />
-									<br />
-                </div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInLeft">
-								<img src="images/vamsi-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-right">
-                	<h2 class="text-italic">Viswa's King</h2>
-                  <h4><span><em>Crazy boy</em></span></h4>
-									<p>
-										Vamsi - Unstoppable
-									</p>
-                </div>
-							</div>
-						</div>
-						<div class="col-sm-6 col-xs-12 featured-right">
-							<div class="featured animate-box" data-animate-effect="fadeInRight">
-								<img src="images/nathiya-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-left">
-									<h2 class="text-italic">Nathiya Viswa</h2>
-									<h4><span><em>Mrs. Loudspeaker</em></span></h4>
-									<p>
-										Sound engineer of our family
-									</p>
-									<br />
-									<br />
-								</div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInRight">
-								<img src="images/sireesha-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-left">
-									<h2 class="text-italic">Sireesha Murali</h2>
-									<h4><span><em>Mrs. Polite</em></span></h4>
-									<p>
-										Most innocent person.
-									</p>
-									<br />
-									<br />
-								</div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInRight">
-								<img src="images/selvia-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-left">
-									<h2 class="text-italic">Selvia Mahesh</h2>
-									<h4><span><em>Mrs. Friendly</em></span></h4>
-									<p>
-										Person with more patience
-									</p>
-									<br />
-									<br />
-								</div>
-							</div>
-							<div class="featured animate-box" data-animate-effect="fadeInRight">
-								<img src="images/dhiksha-single.jpg" class="img-responsive img-circle" alt="">
-								<div class="text-left">
-									<h2 class="text-italic">Murali's Queen</h2>
-									<h4><span><em>Cutie Pie</em></span></h4>
-									<p>
-										Dharshini - Cutest doll.
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-			</section>
-
-			<section class="colorlib-contact" data-section="contact">
+			<section class="colorlib-contact" data-section="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -821,6 +464,42 @@
 									   </div>
 									</div>
 						   		</article>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section" data-section="awards">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">My Achievements</span>
+							<h2 class="colorlib-heading animate-box">Awards & Certificaitons</h2>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Awards</span>
+							<div class="project" style="background-image: url(images/gallery-1.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">At Home</a></h3>
+										<span>Weekend Fun</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<span class="heading-meta">Certifications</span>
+							<div class="project" style="background-image: url(images/gallery-2.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Our Gang</a></h3>
+										<span>Celebration Mode</span>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
