Added experience, hobbies, awards and certifications

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<li><a href="#" data-nav-section="awards">Awards & Certifications</a></li>
 						<li><a href="#" data-nav-section="hobbies">Hobbies</a></li>
 						<!--<li><a href="#" data-nav-section="blog">Blog</a></li>-->
-						<li><a href="#" data-nav-section="contact">Quote</a></li>
+						<li><a href="#" data-nav-section="quotes">Quotes</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -146,7 +146,7 @@
 						</div>
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInTop">
 							<div class="services color-4">
-								<h3 class="text-success">Knowledge Sharing <span class="ml-2"><i class="fas fa-book-reader"></i></span></h3>
+								<h3 class="text-success">Knowledge Sharing <span class="ml-2"><i class="fas fa-chalkboard-teacher"></i></span></h3>
 								<p class="mb-0">
 									<strong>A Chennaite</strong>  who
 									get excited for every "Hello World" written in new programming language. 
@@ -160,7 +160,7 @@
 
 			<section class="education" data-section="education">
 				<div class="container-fluid">
-					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+					<div class="row animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
 							<div class="about-desc">
 								<span class="heading-meta">My Qualification</span>
@@ -170,8 +170,9 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Schooling</span>
 							<div class="services color-1">
-								<h3>Sir M.Ct.M Trust Centenary HSS</h3>
+								<h3>Sir M.Ct.M Trust Centenary HSS<span title="Primary Education" class="p-2 text-primary"><i class="fas fa-book-open fa-2x"></i></span></h3>
 								<p>
 									Passed HSS (2006-2007) & obtained <strong class="text-success">75.33%</strong>
 								</p>
@@ -181,8 +182,9 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<span class="heading-meta">College</span>
 							<div class="services color-2">
-								<h3 class="mb-3">S.A Engineering College</h3>
+								<h3 class="mb-3">S.A Engineering College<span title="Graduation" class="p-2 text-danger"><i class="fas fa-user-graduate fa-2x"></i></span></h3>
 								<p>
 									Passed B.Tech IT (2007-2011) and obtained <strong class="text-success">73%</strong>
 								</p>
@@ -199,7 +201,7 @@
 			<section class="skills" data-section="skills">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-12 col-md-offset-3 col-md-pull-3">
+						<div class="col-md-12">
 							<span class="heading-meta animate-box"  data-animate-effect="fadeInLeft">Competencies</span>
 							<h2 class="colorlib-heading animate-box" data-animate-effect="fadeInRight">Skills</h2>
 							<div class="row">
@@ -400,12 +402,15 @@
 
 											<div class="timeline-label">
 												<h2><a href="#">Techsamrat Info Technologies</a> <span>Dec 2014 - Jan 2016</span></h2>
-												<strong>Junior Software Engineer</strong>
-												<span></span>
-												<strong>Project : </strong>
-												<span>CoderTest</span> 
-												<p>Pre wedding dinner will have the authentic south indian dishes.
-													  But don't have it heavy because we have a dance floor.
+												<div class="mb-2">
+													<span class="pr-4"><strong>Role : </strong>Junior Software Engineer</span>
+													<strong>Project : </strong><span>CoderTest</span> 
+												</div>
+												<p>
+													Place where I had started learning alphbets of IT industry. I was working on the project "CoderTest" 
+													which is online assessment application for recruiting experienced professionals. I was working on <strong>ASP.NET MVC</strong>  and <strong>SQL Server 2012</strong>.
+													Along side I was working on responsiveness of the application using media queries and bootstrap.
+													<strong>Javascript</strong> and <strong>jQuery</strong> are the other ingredients I have added to the project.
 												</p>
 											</div>
 									 </div>
@@ -418,12 +423,14 @@
 
 											<div class="timeline-label">
 												 <h2><a href="#">Ramco Systems</a> <span>Jan 2016 - Jun 2017</span></h2>
-												 <strong>Role : </strong>
-												 <span>Programmer Analyst</span>
-												 <strong>Project : </strong>
-												<span>CoderTest</span>
+												 <div class="mb-2">
+													<span class="pr-4"><strong>Role : </strong>Programmer Analyst</span>
+													<strong>Project : </strong><span>OBCS</span> 
+												</div>
 												 <p>
-												 	A traditional marriage so join us in traditional outfit.
+													 OBCS is a process automation software for cement production plants. It is the place I got an opportunity 
+													 to work on desktop application (Winforms). I had migrated existing Asp.Net application into Asp.Net MVC application.
+													 And developed web reports using <strong>AngularJS</strong> and <strong>amCharts</strong>.
 												 </p>
 											</div>
 									 </div>
@@ -436,12 +443,16 @@
 
 									   <div class="timeline-label">
 											<h2><a href="#">ADP India Pvt Ltd</a> <span>Jun 2017 - Dec 2019</span></h2>
-											<strong>Role : </strong>
-											<span>Application Developer</span>
-											<strong>Project : </strong>
-											<span>iHCM</span>
+											<div class="mb-2">
+												<span class="pr-4"><strong>Role : </strong>Application Developer</span>
+												<strong>Project : </strong><span>iHCM (EMEA)</span> 
+											</div>
 											<p>
-												A traditional marriage so join us in traditional outfit.
+												iHCM is flagship product of ADP I have been part of serving EMEA clients. 
+												I was working on updating the legacy product with new UI with help of Flex design and AngularJS.
+												<strong>Typescript</strong> is used to code the AngularJS parts which helped to implement type safety and more object oriented design.
+												Created custom directives to serve six different context.
+												Worked on <strong>Nlog</strong> and <strong>Google Analytics</strong> for tracking user activity.
 											</p>
 									   </div>
 									</div>
@@ -454,16 +465,28 @@
 
 										<div class="timeline-label">
 											<h2><a href="#">Mindtree</a> <span>Jan 2020 - Present</span></h2>
-											<strong>Role : </strong>
-											<span>Module Lead</span>
-											<strong>Project : </strong>
-											<span>TRG</span>
+											<div class="mb-2">
+												<span class="pr-4"><strong>Role : </strong>Module Lead</span>
+												<strong>Project : </strong><span>TRG</span> 
+											</div>
 											<p>
-												A traditional marriage so join us in traditional outfit.
+												TRG is a subsidiary of Realogy Group which is a real estate company in USA.
+												Working on core Javascript and been part of TDD.
 											</p>
 									   </div>
 									</div>
-						   		</article>
+								</article> 
+								<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<div class="timeline-entry-inner">
+										<div class="timeline-icon color-5">
+											<i class="far fa-building"></i>
+								   		</div>
+
+										<div class="timeline-label">
+											<h2>Awaiting to fill this place</h2>
+									   </div>
+									</div>
+						   		</article>   
 							</div>
 						</div>
 					</div>
@@ -471,7 +494,7 @@
 			</section>
 
 			<section class="section" data-section="awards">
-				<div class="colorlib-narrow-content">
+				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Achievements</span>
@@ -482,24 +505,94 @@
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">Awards</span>
-							<div class="project" style="background-image: url(images/gallery-1.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">At Home</a></h3>
-										<span>Weekend Fun</span>
-									</div>
-								</div>
+							<div class="services color-5">
+								<p>
+									<span class="text-success p-1"><i class="fas fa-award fa-2x"></i></span><strong>Best Innovator</strong> at ADP India Pvt for 2018-19
+								</p>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<span class="heading-meta">Certifications</span>
-							<div class="project" style="background-image: url(images/gallery-2.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Our Gang</a></h3>
-										<span>Celebration Mode</span>
-									</div>
-								</div>
+							<div class="services color-1">
+								<p>
+									<span class="text-primary p-1"><i class="fas fa-graduation-cap fa-2x"></i></span><strong>Javascript Basic</strong> Certification in hackerrank
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="education" data-section="hobbies">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<span class="heading-meta  animate-box" data-animate-effect="fadeInLeft">My Pass Time</span>
+							<h2 class="colorlib-heading  animate-box" data-animate-effect="fadeInRight">Hobbies</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Sports</span>
+							<div class="services color-1">
+								<p>
+									<span class="text-danger p-1"><i class="fas fa-baseball-ball"></i></span> Not a follower of NBA but I love playing basket ball
+								</p>
+								<p>
+									<span class="text-primary p-1"><i class="fas fa-table-tennis"></i></span> First thing I learned in IT industry is Table Tennis
+								</p>
+								<p>
+									<span class="text-dark p-1"><i class="fas fa-chess-king"></i></span> Playing Chess is my favorite pass time during travel
+								</p>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<span class="heading-meta">Miscellanous</span>
+							<div class="services color-2">
+								<p>
+									<span class="text-info p-1"><i class="fas fa-book-reader"></i></span> Not an avid reader but love to read mythologies
+								</p>
+								<p>
+									<span class="text-warning p-1"><i class="fas fa-music"></i></span> I kill more time listening to music
+								</p>
+								<p>
+									<span class="text-success p-1"><i class="fas fa-seedling"></i></span> Gardening is my most fav hobby
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="education" data-section="quotes">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<span class="heading-meta animate-box" data-animate-effect="fadeInLeft">My Tag Line</span>
+							<h2 class="colorlib-heading animate-box" data-animate-effect="fadeInRight">Quotes</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Malcomm X</span>
+							<div class="services color-1">
+								<p>
+									Without education, you’re not going anywhere in this world
+								</p>
+								<p>
+									Nobody can give you freedom. Nobody can give you equality or justice. If you're a man, you take it.
+								</p>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<span class="heading-meta">Martin Luther King Jr</span>
+							<div class="services color-4">
+								<p>
+									Life's most persistent and urgent question is, 'What are you doing for others?
+								</p>
+								<p>
+									Darkness cannot drive out darkness; only light can do that. Hate cannot drive out hate; only love can do that.
+								</p>
 							</div>
 						</div>
 					</div>
