Modified content in knowledge sharing section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							<div class="services color-4">
 								<h3 class="text-success">Knowledge Sharing <span class="ml-2"><i class="fas fa-chalkboard-teacher"></i></span></h3>
 								<p class="mb-0">
-									I always when I teach one, two will learn. Knowledge sharing is my key USP.
+									I believe when I teach one, two will learn. Knowledge sharing is my key USP.
 									Sharing the knowledge across your peers not only enlight them it also gives confidence over that topic.
 								</p>
 							</div>
